# trass-vm

./: .travis.yml  README.md  trass-vm.cabal
src/Trass/: VM.hs
src/Trass/VM/: Config.hs
src/Trass/VM/Config/: Command.hs  Submission.hs  User.hs
