name:                trass-vm
version:             0.1
synopsis:            Virtual machine (container) management for TRASS.
-- description:
homepage:            https://github.com/fizruk/trass-vm
bug-reports:         https://github.com/fizruk/trass-vm/issues
license:             BSD3
license-file:        LICENSE
author:              Nickolay Kudasov
maintainer:          nickolay.kudasov@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:     src
  default-language:   Haskell2010
  exposed-modules:
    Trass.VM
    Trass.VM.Config
    Trass.VM.Config.Command
    Trass.VM.Config.User
    Trass.VM.Config.Submission
  default-extensions:
    OverloadedStrings
    RecordWildCards
    NoMonomorphismRestriction
  build-depends:      base          >=4.7   &&  <4.8
                    , transformers  >=0.2
                    , text
                    , aeson         >=0.2
                    , filepath
                    , trass-config

source-repository head
  type: git
  location: https://github.com/fizruk/trass-vm.git
  branch: master
